--- a/list/index.html
+++ b/list/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Redirecting...</title>
+      <title>Good VTuber Subs</title>
       <meta http-equiv = "refresh" content = "2; url = https://www.notion.so/7f8ca4d7cdb84730a1ff11a1ded08709?v=6e5a840952024335b3bd493fe9d91c6a" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="../style.css">
+      <script src="../script.js"></script>
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+      <link rel="manifest" href="/site.webmanifest">
+      <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4ea0f0">
+      <meta name="msapplication-TileColor" content="#4ea0f0">
+      <meta name="theme-color" content="#ffffff">
    </head>
    <body>
-      <h1>Redirecting...</h1>
+     <section>
+        <img src="../icon.png" class="animate__animated animate__zoomIn animate__fadeIn" />
+       <h1 class="animate__animated animate__fadeInUp">Good VTuber Subs</h1>
+       <p id="target" >Insert witty text here.</p>
+     </section>
    </body>
 </html>
