--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
    <head>
       <title>Good VTuber Subs</title>
       <meta http-equiv = "refresh" content = "2; url = https://www.notion.so/Good-VTuber-Subs-f4e14bfd7f3749c385b55b98913b99c8" />
+      <meta charset="utf-8" /> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
       <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="style.css">
       <script src="script.js"></script>
       <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
