--- a/list/index.html
+++ b/list/index.html
@@ -3,15 +3,17 @@
    <head>
       <title>Good VTuber Subs</title>
       <meta http-equiv = "refresh" content = "2; url = https://www.notion.so/7f8ca4d7cdb84730a1ff11a1ded08709?v=6e5a840952024335b3bd493fe9d91c6a" />
+      <meta charset="utf-8" /> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
       <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="../style.css">
       <script src="../script.js"></script>
-      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-      <link rel="manifest" href="/site.webmanifest">
-      <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4ea0f0">
+      <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+      <link rel="manifest" href="../site.webmanifest">
+      <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#4ea0f0">
       <meta name="msapplication-TileColor" content="#4ea0f0">
       <meta name="theme-color" content="#ffffff">
    </head>
