--- a/mobile/index.html
+++ b/mobile/index.html
@@ -34,12 +34,15 @@
         ],
         "id": [
           YT_ID
+        ],
+        "hl": [
+          "en_US"
         ]
       })
           .then(function(response) {
                   // Handle the results here (response.result has the parsed body).
                   console.log("Response", response);
-                  var YT_title = response.result.items[0].snippet.title;
+                  var YT_title = response.result.items[0].snippet.localized.title;
                   var YT_channel = response.result.items[0].snippet.channelTitle;
                   var result = YT_title + "\n" + YT_Link + "\nTranslated by ➡️ " + YT_channel;
                   var YT_thumbnail = "<img src=\"" + response.result.items[0].snippet.thumbnails.maxres.url + "\" height=\"500px\">";
