--- a/formatter/index.html
+++ b/formatter/index.html
@@ -13,6 +13,7 @@
       <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#4ea0f0">
       <meta name="msapplication-TileColor" content="#4ea0f0">
       <meta name="theme-color" content="#ffffff">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <script src="https://apis.google.com/js/api.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <script>
@@ -74,25 +75,53 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   <style>
-    .btn {
-      font-size: 3rem;
+    @media screen and (min-width: 601px) {
+      .main-div{
+        width: 500px;
+        margin: 0 auto;
+        text-align: center;
+      }
+      .btn {
+      font-size: 1rem;
+      width: 50%
+      }
+      .form-control{
+        font-size: 1rem;
+      }
+      .logo {
+        padding: 3rem;
+      }
+      .logo-img{
+        width: 40%;
+      }
+    }
+    @media screen and (max-width: 600px) {
+      .main-div{
+        width: 100%;
+      }
+      .btn {
+      font-size: 2rem;
       width: 100%;
+      }
+      .form-control{
+        font-size: 2rem;
+      }
+      .logo {
+        padding: 8rem;
+      }
     }
-    .form-control{
-      font-size: 3rem;
-    }
-    .logo {
-      padding: 8rem;
-    }
+    
   </style>
 </head>
 <body onload="loadClient()">
-  <div style="width:100%;text-align:center;" class="logo">
-    <img src="../icon.png" />
-  </div>
-  <input class="form-control" id="IDinput" placeholder="YouTube Link" onkeyup="execute()">
-  <div style="width:100%;text-align:center;" id="embedSpace"></div>
-  <textarea id="result" class="form-control" rows="5"></textarea>
-  <button onclick="copy()" id="copyButton" class="btn btn-primary mb-3">Copy</button>
+  <div class="main-div">
+    <div style="width:100%;text-align:center;" class="logo">
+      <img src="../icon.png" class="logo-img"/>
+    </div>
+    <input class="form-control" id="IDinput" placeholder="YouTube Link" onkeyup="execute()">
+    <div style="width:100%;text-align:center;" id="embedSpace"></div>
+    <textarea id="result" class="form-control" rows="5"></textarea>
+    <button onclick="copy()" id="copyButton" class="btn btn-primary mb-3">Copy</button>
+</div>
 </body>
 </html>
