--- a/formatter/index.html
+++ b/formatter/index.html
@@ -58,7 +58,7 @@
                   var YT_channel = response.result.items[0].snippet.channelTitle;
                   var result = YT_title + "\n" + YT_Link + "\nTranslated by ➡️ " + YT_channel;
                   document.getElementById('result').innerHTML = result;
-                  var YT_thumbnail = "<img src=\"" + response.result.items[0].snippet.thumbnails.maxres.url + "\" height=\"500px\">";
+                  var YT_thumbnail = "<img src=\"" + response.result.items[0].snippet.thumbnails.maxres.url + "\" width=\"100%\">";
                   document.getElementById('embedSpace').innerHTML = YT_thumbnail;
                 },
                 function(err) { console.error("Execute error", err); });
@@ -100,14 +100,17 @@
         width: 100%;
       }
       .btn {
-      font-size: 2rem;
+      font-size: 1rem;
       width: 100%;
       }
       .form-control{
-        font-size: 2rem;
+        font-size: 1rem;
       }
       .logo {
-        padding: 8rem;
+        padding: 2rem;
+      }
+      .logo-img{
+        width: 60%;
       }
     }
     
