splash screen update

--- a/botmanager/index.html
+++ b/botmanager/index.html
@@ -18,10 +18,10 @@
       <meta name="theme-color" content="#ffffff">
    </head>
    <body>
-     <section>
+     <div id="main">
         <img src="../icon.png" class="animate__animated animate__zoomIn animate__fadeIn" />
        <h1 class="animate__animated animate__fadeInUp">Good VTuber Subs</h1>
        <p>Bot Manager</p>
-     </section>
+     </div>
    </body>
 </html>
