--- a/how/index.html
+++ b/how/index.html
@@ -18,10 +18,10 @@
       <meta name="theme-color" content="#ffffff">
    </head>
    <body>
-     <section>
-        <img src="../icon.png" class="animate__animated animate__zoomIn animate__fadeIn" />
-       <h1 class="animate__animated animate__fadeInUp">Good VTuber Subs</h1>
-       <p id="target" >Insert witty text here.</p>
-     </section>
+      <div id="main">
+         <div id="icon"></div>
+        <h1 class="animate__animated animate__fadeInUp">Good VTuber Subs</h1>
+        <p id="target" >Insert witty text here.</p>
+      </div>
    </body>
 </html>
