--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Good VTuber Subs</title>
-      <meta http-equiv = "refresh" content = "2; url = https://www.notion.so/Good-VTuber-Subs-f4e14bfd7f3749c385b55b98913b99c8" />
+      <!--<meta http-equiv = "refresh" content = "2; url = https://www.notion.so/Good-VTuber-Subs-f4e14bfd7f3749c385b55b98913b99c8" />-->
       <meta charset="utf-8" /> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
       <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -18,10 +18,10 @@
       <meta name="theme-color" content="#ffffff">
    </head>
    <body>
-     <section>
-        <img src="icon.png" class="animate__animated animate__zoomIn animate__fadeIn" />
+     <div id="main">
+        <div id="icon"></div>
        <h1 class="animate__animated animate__fadeInUp">Good VTuber Subs</h1>
        <p id="target" >Insert witty text here.</p>
-     </section>
+     </div>
    </body>
 </html>
