adjusted splash screen timings

--- a/how/index.html
+++ b/how/index.html
@@ -20,8 +20,8 @@
    <body>
       <div id="main">
          <div id="icon"></div>
-        <h1 class="animate__animated animate__fadeInUp">Good VTuber Subs</h1>
-        <p id="target" >Insert witty text here.</p>
+        <h1 class="animate__animated animate__fadeInUp animate__delay-1s">Good VTuber Subs</h1>
+        <p id="target" class="animate__animated animate__fadeInUp animate__delay-3s" >Insert witty text here.</p>
       </div>
    </body>
 </html>
