--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Good VTuber Subs</title>
-      <meta http-equiv = "refresh" content = "2; url = https://www.notion.so/Good-VTuber-Subs-f4e14bfd7f3749c385b55b98913b99c8" />
+      <!--<meta http-equiv = "refresh" content = "2; url = https://www.notion.so/Good-VTuber-Subs-f4e14bfd7f3749c385b55b98913b99c8" />-->
       <meta charset="utf-8" /> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
       <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -20,8 +20,8 @@
    <body>
      <div id="main">
         <div id="icon"></div>
-       <h1 class="animate__animated animate__fadeInUp">Good VTuber Subs</h1>
-       <p id="target" >Insert witty text here.</p>
+       <h1 class="animate__animated animate__fadeInUp animate__delay-1s">Good VTuber Subs</h1>
+       <p id="target" class="animate__animated animate__fadeInUp animate__delay-3s" >Insert witty text here.</p>
      </div>
    </body>
 </html>
