--- a/formatter/index.html
+++ b/formatter/index.html
@@ -39,11 +39,11 @@
     // Make sure the client is loaded and sign-in is complete before calling this method.
     function execute() {
       var YT_Link = document.getElementById('IDinput').value;
-      if(YT_Link.includes("youtube.com"))
+      if(YT_Link.includes("youtu.be"))
       {
         var YT_ID = YT_Link.split('/')[3];
       }
-      else if(YT_Link.includes("youtu.be"))
+      else if(YT_Link.includes("youtube.com"))
       {
         var YT_ID = YT_Link.split('=')[1];
       }
@@ -138,7 +138,7 @@
     <textarea id="result" class="form-control" rows="5"></textarea>
     <button onclick="copy()" id="copyButton" class="btn btn-primary mb-3">Copy</button>
     <div style="position: absolute; bottom: 5px; background-color: green">
-      Good VTuber Subs Formatter v2021.3.7.1039
+      Good VTuber Subs Formatter v2021.3.7.1042
     </div>
   </div>
 </body>
