--- a/formatter/index.html
+++ b/formatter/index.html
@@ -137,9 +137,8 @@
     <div style="width:100%;text-align:center;" id="embedSpace"></div>
     <textarea id="result" class="form-control" rows="5"></textarea>
     <button onclick="copy()" id="copyButton" class="btn btn-primary mb-3">Copy</button>
-    <div style="position: absolute; bottom: 5px; background-color: green">
-      Good VTuber Subs Formatter v2021.3.7.1042
-    </div>
+  </div>
+  <div style="position: absolute;bottom: 15px;text-align: center;width: 100%">Good VTuber Subs Formatter v2021.3.7.1046
   </div>
 </body>
 </html>
