logo fix in some subpages

--- a/botmanager/index.html
+++ b/botmanager/index.html
@@ -19,7 +19,7 @@
    </head>
    <body>
      <div id="main">
-        <img src="../icon.png" class="animate__animated animate__zoomIn animate__fadeIn" />
+        <img src="/img/icon.png" class="animate__animated animate__zoomIn animate__fadeIn" />
        <h1 class="animate__animated animate__fadeInUp">Good VTuber Subs</h1>
        <p>Bot Manager</p>
      </div>
