--- a/formatter/index.html
+++ b/formatter/index.html
@@ -131,7 +131,7 @@
 <body onload="loadClient()">
   <div class="main-div">
     <div style="width:100%;text-align:center;" class="logo">
-      <img src="../icon.png" class="logo-img"/>
+      <img src="/img/icon.png" class="logo-img"/>
     </div>
     <input class="form-control" id="IDinput" placeholder="YouTube Link" onkeyup="execute()">
     <div style="width:100%;text-align:center;" id="embedSpace"></div>
