--- a/faq/index.html
+++ b/faq/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Good VTuber Subs</title>
-      <meta http-equiv = "refresh" content = "3; url = https://www.notion.so/FAQ-2456590ac33c4ed4b9d0dd3a277665da" />
+      <meta http-equiv = "refresh" content = "3; url = https://goodvtubersubs.com/faq" />
       <meta charset="utf-8" /> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
       <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
