--- a/how/index.html
+++ b/how/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Good VTuber Subs</title>
-      <meta http-equiv = "refresh" content = "3; url = https://www.notion.so/How-does-the-bot-work-6efd971bd4e3466488769907c385d5a5" />
+      <meta http-equiv = "refresh" content = "3; url = https://goodvtubersubs.com/how" />
       <meta charset="utf-8" /> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
       <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
