Updated BG color

--- a/twitter/index.html
+++ b/twitter/index.html
@@ -2,7 +2,7 @@
     <head>
 
     </head>
-    <body style="background-color:#2F3437;">
+    <body style="background-color:#191919;">
         <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/GoodVTuberSubs?ref_src=twsrc%5Etfw">Tweets by GoodVTuberSubs</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </body>
 </html>
