--- a/scheduler/index.html
+++ b/scheduler/index.html
@@ -39,7 +39,8 @@
     // Make sure the client is loaded and sign-in is complete before calling this method.
     function execute() {
       var YT_Link = document.getElementById('IDinput').value;
-      YT_Link = YT_Link.substring(0, YT_Link.indexOf('&'));
+      YT_Link = YT_Link.split('&')[0];
+      console.log(YT_Link);
       if(YT_Link.includes("youtu.be"))
       {
         var YT_ID = YT_Link.split('/')[3];
